# pubchem.rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
src/: error.rs  lib.rs  utils.rs
src/model/: mod.rs  rest.rs
src/parser/: macros.rs  mod.rs
